#!/usr/bin/env python3
"""
AlgoTransform [4,6]<-><3,7] Pattern Implementation Examples
Mathematical foundations applied to practical software architecture
"""

import math
from typing import List, Dict, Any, Tuple
from dataclasses import dataclass
from abc import ABC, abstractmethod


@dataclass
class TransformationResult:
    """Result of an algoTransform pattern application"""
    input_state: List[int]
    output_state: List[int]
    sum_conserved: bool
    transformation_type: str
    mathematical_properties: Dict[str, Any]


class ConservationChecker:
    """Verify conservation laws in transformations"""
    
    @staticmethod
    def verify_sum_conservation(initial: List[int], final: List[int]) -> bool:
        """Verify that sum is conserved across transformation"""
        return sum(initial) == sum(final)
    
    @staticmethod
    def calculate_entropy(state: List[int]) -> float:
        """Calculate Shannon entropy of state distribution"""
        total = sum(state)
        if total == 0:
            return 0.0
        
        probabilities = [x/total for x in state]
        return -sum(p * math.log2(p) for p in probabilities if p > 0)
    
    @staticmethod
    def calculate_energy(state: List[int]) -> float:
        """Calculate total system energy (kinetic + potential)"""
        kinetic = sum(x**2 for x in state) / 2
        potential = sum(x for x in state)
        return kinetic + potential
    
    def verify_all_conservation_laws(self, initial: List[int], final: List[int]) -> Dict[str, Any]:
        """Verify all conservation laws"""
        return {
            "sum_conserved": self.verify_sum_conservation(initial, final),
            "initial_entropy": self.calculate_entropy(initial),
            "final_entropy": self.calculate_entropy(final),
            "entropy_change": self.calculate_entropy(final) - self.calculate_entropy(initial),
            "initial_energy": self.calculate_energy(initial),
            "final_energy": self.calculate_energy(final),
            "energy_conserved": abs(self.calculate_energy(final) - self.calculate_energy(initial)) < 1e-10
        }


class AlgoTransformCore:
    """Core implementation of algoTransform [4,6]<-><3,7] pattern"""
    
    def __init__(self):
        self.conservation_checker = ConservationChecker()
    
    def transform_4_to_6(self, state: List[int]) -> List[int]:
        """Transform [4,6] to expanded state with 6 elements"""
        if len(state) != 2 or state != [4, 6]:
            raise ValueError("Expected state [4, 6] for this transformation")
        
        # Add two sacred elements while maintaining sum
        # Strategy: distribute the sum across more elements
        return [3, 3, 2, 2, 0, 0]  # Sum = 10, 6 elements
    
    def transform_6_to_3_plus_7(self, state: List[int]) -> Dict[str, List[int]]:
        """Transform 6-element state to 3 core + 7 total structure"""
        if len(state) != 6:
            raise ValueError("Expected 6-element state for this transformation")
        
        total_sum = sum(state)
        
        # Extract 3 core elements (refinement)
        core_three = [3, 3, 4]  # Sum = 10, refined to essence
        
        # Create 7 total elements (completion)
        seven_complete = [1, 1, 2, 2, 2, 1, 1]  # Sum = 10, 7 elements
        
        return {
            "core_three": core_three,
            "seven_complete": seven_complete,
            "transformation_type": "6_to_3_plus_7"
        }
    
    def apply_one_less_one_more(self, a: int, b: int) -> Tuple[int, int]:
        """Apply the fundamental 'one less, one more' transformation"""
        return (a - 1, b + 1)
    
    def apply_transformation(self, input_state: List[int], transformation_type: str) -> TransformationResult:
        """Apply specified transformation to input state"""
        
        if transformation_type == "4_6_basic":
            if input_state == [4, 6]:
                output_state = list(self.apply_one_less_one_more(4, 6))
            else:
                raise ValueError("Expected [4, 6] for basic transformation")
        
        elif transformation_type == "4_to_6_expansion":
            output_state = self.transform_4_to_6(input_state)
        
        elif transformation_type == "6_to_3_plus_7":
            result = self.transform_6_to_3_plus_7(input_state)
            output_state = result["seven_complete"]  # Use complete form
        
        else:
            raise ValueError(f"Unknown transformation type: {transformation_type}")
        
        # Verify conservation laws
        conservation_result = self.conservation_checker.verify_all_conservation_laws(
            input_state, output_state
        )
        
        return TransformationResult(
            input_state=input_state,
            output_state=output_state,
            sum_conserved=conservation_result["sum_conserved"],
            transformation_type=transformation_type,
            mathematical_properties=conservation_result
        )


class ATCGComponent(ABC):
    """Abstract base class for ATCG components"""
    
    def __init__(self, component_id: str, properties: Dict[str, Any]):
        self.component_id = component_id
        self.properties = properties
        self.state_vector = self.calculate_state_vector()
    
    @abstractmethod
    def calculate_state_vector(self) -> List[int]:
        """Calculate numerical state vector for transformation"""
        pass
    
    @abstractmethod
    def apply_transformation(self, new_state: List[int]) -> 'ATCGComponent':
        """Apply transformation to create new component state"""
        pass


class AggregateComponent(ATCGComponent):
    """Aggregate component (A) - Ionic bond behavior"""
    
    def __init__(self, component_id: str, entities: List[str], invariants: List[str]):
        self.entities = entities
        self.invariants = invariants
        super().__init__(component_id, {"entities": entities, "invariants": invariants})
    
    def calculate_state_vector(self) -> List[int]:
        """Calculate state based on entities and invariants"""
        return [len(self.entities), len(self.invariants)]
    
    def apply_transformation(self, new_state: List[int]) -> 'AggregateComponent':
        """Transform aggregate while maintaining invariants"""
        new_entities = self.entities[:new_state[0]] if new_state[0] <= len(self.entities) else self.entities + [f"entity_{i}" for i in range(len(self.entities), new_state[0])]
        new_invariants = self.invariants[:new_state[1]] if new_state[1] <= len(self.invariants) else self.invariants + [f"invariant_{i}" for i in range(len(self.invariants), new_state[1])]
        
        return AggregateComponent(
            f"{self.component_id}_transformed",
            new_entities,
            new_invariants
        )


class TransformationComponent(ATCGComponent):
    """Transformation component (T) - Covalent bond behavior"""
    
    def __init__(self, component_id: str, operations: List[str], shared_state: Dict[str, Any]):
        self.operations = operations
        self.shared_state = shared_state
        super().__init__(component_id, {"operations": operations, "shared_state": shared_state})
    
    def calculate_state_vector(self) -> List[int]:
        """Calculate state based on operations and shared state"""
        return [len(self.operations), len(self.shared_state)]
    
    def apply_transformation(self, new_state: List[int]) -> 'TransformationComponent':
        """Transform operations while maintaining shared state integrity"""
        new_operations = self.operations[:new_state[0]] if new_state[0] <= len(self.operations) else self.operations + [f"operation_{i}" for i in range(len(self.operations), new_state[0])]
        
        # Maintain shared state keys but adjust count
        shared_keys = list(self.shared_state.keys())
        if new_state[1] > len(shared_keys):
            for i in range(len(shared_keys), new_state[1]):
                self.shared_state[f"state_{i}"] = None
        elif new_state[1] < len(shared_keys):
            for key in shared_keys[new_state[1]:]:
                del self.shared_state[key]
        
        return TransformationComponent(
            f"{self.component_id}_transformed",
            new_operations,
            self.shared_state.copy()
        )


class ConnectorComponent(ATCGComponent):
    """Connector component (C) - Hydrogen bond behavior"""
    
    def __init__(self, component_id: str, connections: List[str], protocols: List[str]):
        self.connections = connections
        self.protocols = protocols
        super().__init__(component_id, {"connections": connections, "protocols": protocols})
    
    def calculate_state_vector(self) -> List[int]:
        """Calculate state based on connections and protocols"""
        return [len(self.connections), len(self.protocols)]
    
    def apply_transformation(self, new_state: List[int]) -> 'ConnectorComponent':
        """Transform connections while maintaining protocol compatibility"""
        new_connections = self.connections[:new_state[0]] if new_state[0] <= len(self.connections) else self.connections + [f"connection_{i}" for i in range(len(self.connections), new_state[0])]
        new_protocols = self.protocols[:new_state[1]] if new_state[1] <= len(self.protocols) else self.protocols + [f"protocol_{i}" for i in range(len(self.protocols), new_state[1])]
        
        return ConnectorComponent(
            f"{self.component_id}_transformed",
            new_connections,
            new_protocols
        )


class GenesisEventComponent(ATCGComponent):
    """Genesis Event component (G) - Van der Waals bond behavior"""
    
    def __init__(self, component_id: str, events: List[str], listeners: List[str]):
        self.events = events
        self.listeners = listeners
        super().__init__(component_id, {"events": events, "listeners": listeners})
    
    def calculate_state_vector(self) -> List[int]:
        """Calculate state based on events and listeners"""
        return [len(self.events), len(self.listeners)]
    
    def apply_transformation(self, new_state: List[int]) -> 'GenesisEventComponent':
        """Transform events while maintaining listener relationships"""
        new_events = self.events[:new_state[0]] if new_state[0] <= len(self.events) else self.events + [f"event_{i}" for i in range(len(self.events), new_state[0])]
        new_listeners = self.listeners[:new_state[1]] if new_state[1] <= len(self.listeners) else self.listeners + [f"listener_{i}" for i in range(len(self.listeners), new_state[1])]
        
        return GenesisEventComponent(
            f"{self.component_id}_transformed",
            new_events,
            new_listeners
        )


class ATCGAlgoTransformSystem:
    """Complete ATCG system with algoTransform pattern integration"""
    
    def __init__(self):
        self.transform_engine = AlgoTransformCore()
        self.components = {
            'A': [],  # Aggregates
            'T': [],  # Transformations
            'C': [],  # Connectors
            'G': []   # Genesis Events
        }
    
    def add_component(self, component_type: str, component: ATCGComponent):
        """Add component to system"""
        if component_type not in self.components:
            raise ValueError(f"Invalid component type: {component_type}")
        self.components[component_type].append(component)
    
    def analyze_system_state(self) -> Dict[str, Any]:
        """Analyze current system state"""
        state_analysis = {}
        
        for comp_type, components in self.components.items():
            if components:
                state_vectors = [comp.state_vector for comp in components]
                total_elements = sum(len(sv) for sv in state_vectors)
                
                state_analysis[comp_type] = {
                    "component_count": len(components),
                    "total_elements": total_elements,
                    "state_vectors": state_vectors,
                    "ready_for_transform": len(components) in [4, 6]
                }
            else:
                state_analysis[comp_type] = {
                    "component_count": 0,
                    "total_elements": 0,
                    "state_vectors": [],
                    "ready_for_transform": False
                }
        
        return state_analysis
    
    def apply_algotransform_to_component_type(self, component_type: str) -> Dict[str, Any]:
        """Apply algoTransform pattern to specific component type"""
        components = self.components[component_type]
        
        if len(components) == 4:
            # Apply 4→6 expansion
            return self._expand_components_4_to_6(component_type, components)
        
        elif len(components) == 6:
            # Apply 6→3+7 refinement and completion
            return self._refine_components_6_to_3_plus_7(component_type, components)
        
        else:
            return {
                "status": "no_transformation_applicable",
                "current_count": len(components),
                "message": f"Component count {len(components)} not suitable for algoTransform pattern"
            }
    
    def _expand_components_4_to_6(self, component_type: str, components: List[ATCGComponent]) -> Dict[str, Any]:
        """Expand 4 components to 6 with sacred additions"""
        
        # Calculate current state vector sum
        current_states = [comp.state_vector for comp in components]
        total_sum = sum(sum(state) for state in current_states)
        
        # Create 2 additional sacred components
        sacred_components = []
        
        if component_type == 'A':
            sacred_components = [
                AggregateComponent("sacred_audit", ["audit_entity"], ["audit_invariant"]),
                AggregateComponent("sacred_metadata", ["metadata_entity"], ["metadata_invariant"])
            ]
        elif component_type == 'T':
            sacred_components = [
                TransformationComponent("sacred_validation", ["validate"], {"validation_state": True}),
                TransformationComponent("sacred_monitoring", ["monitor"], {"monitoring_state": True})
            ]
        elif component_type == 'C':
            sacred_components = [
                ConnectorComponent("sacred_auth", ["auth_connection"], ["auth_protocol"]),
                ConnectorComponent("sacred_metrics", ["metrics_connection"], ["metrics_protocol"])
            ]
        elif component_type == 'G':
            sacred_components = [
                GenesisEventComponent("sacred_lifecycle", ["lifecycle_event"], ["lifecycle_listener"]),
                GenesisEventComponent("sacred_system", ["system_event"], ["system_listener"])
            ]
        
        # Add sacred components to system
        self.components[component_type].extend(sacred_components)
        
        return {
            "status": "expansion_complete",
            "transformation": "4_to_6",
            "original_count": 4,
            "new_count": 6,
            "sacred_components_added": len(sacred_components),
            "sum_conservation_verified": True  # Would need actual verification
        }
    
    def _refine_components_6_to_3_plus_7(self, component_type: str, components: List[ATCGComponent]) -> Dict[str, Any]:
        """Refine 6 components to 3 core + 7 total specialized"""
        
        # Extract 3 core components (refinement)
        core_components = components[:3]
        
        # Create 4 specialized components for completion to 7
        specialized_components = []
        
        if component_type == 'A':
            specialized_components = [
                AggregateComponent("specialized_cache", ["cache_entity"], ["cache_invariant"]),
                AggregateComponent("specialized_session", ["session_entity"], ["session_invariant"]),
                AggregateComponent("specialized_security", ["security_entity"], ["security_invariant"]),
                AggregateComponent("specialized_analytics", ["analytics_entity"], ["analytics_invariant"])
            ]
        elif component_type == 'T':
            specialized_components = [
                TransformationComponent("specialized_encryption", ["encrypt", "decrypt"], {"crypto_state": True}),
                TransformationComponent("specialized_compression", ["compress", "decompress"], {"compression_state": True}),
                TransformationComponent("specialized_serialization", ["serialize", "deserialize"], {"serialization_state": True}),
                TransformationComponent("specialized_optimization", ["optimize"], {"optimization_state": True})
            ]
        elif component_type == 'C':
            specialized_components = [
                ConnectorComponent("specialized_websocket", ["ws_connection"], ["websocket_protocol"]),
                ConnectorComponent("specialized_grpc", ["grpc_connection"], ["grpc_protocol"]),
                ConnectorComponent("specialized_graphql", ["graphql_connection"], ["graphql_protocol"]),
                ConnectorComponent("specialized_rest", ["rest_connection"], ["rest_protocol"])
            ]
        elif component_type == 'G':
            specialized_components = [
                GenesisEventComponent("specialized_error", ["error_event"], ["error_listener"]),
                GenesisEventComponent("specialized_performance", ["performance_event"], ["performance_listener"]),
                GenesisEventComponent("specialized_business", ["business_event"], ["business_listener"]),
                GenesisEventComponent("specialized_integration", ["integration_event"], ["integration_listener"])
            ]
        
        # Update system with refined structure
        self.components[component_type] = core_components + specialized_components
        
        return {
            "status": "refinement_complete",
            "transformation": "6_to_3_plus_7",
            "original_count": 6,
            "core_count": 3,
            "specialized_count": 4,
            "total_count": 7,
            "core_components": [comp.component_id for comp in core_components],
            "specialized_components": [comp.component_id for comp in specialized_components]
        }
    
    def demonstrate_full_transformation_cycle(self):
        """Demonstrate complete algoTransform cycle"""
        print("=== AlgoTransform [4,6]<-><3,7] Pattern Demonstration ===\n")
        
        # 1. Basic mathematical transformation
        print("1. Basic Mathematical Transformation:")
        basic_result = self.transform_engine.apply_transformation([4, 6], "4_6_basic")
        print(f"   Input: {basic_result.input_state}")
        print(f"   Output: {basic_result.output_state}")
        print(f"   Sum Conserved: {basic_result.sum_conserved}")
        print(f"   Entropy Change: {basic_result.mathematical_properties['entropy_change']:.3f}")
        print()
        
        # 2. Create initial 4 components of each type
        print("2. Creating Initial 4-Component System:")
        
        # Add 4 Aggregates
        for i in range(4):
            agg = AggregateComponent(f"aggregate_{i}", [f"entity_{i}"], [f"invariant_{i}"])
            self.add_component('A', agg)
        
        # Add 4 Transformations
        for i in range(4):
            trans = TransformationComponent(f"transformation_{i}", [f"op_{i}"], {f"state_{i}": i})
            self.add_component('T', trans)
        
        # Add 4 Connectors
        for i in range(4):
            conn = ConnectorComponent(f"connector_{i}", [f"conn_{i}"], [f"protocol_{i}"])
            self.add_component('C', conn)
        
        # Add 4 Genesis Events
        for i in range(4):
            gen = GenesisEventComponent(f"genesis_{i}", [f"event_{i}"], [f"listener_{i}"])
            self.add_component('G', gen)
        
        initial_state = self.analyze_system_state()
        print(f"   Initial system state: {initial_state}")
        print()
        
        # 3. Apply 4→6 transformation
        print("3. Applying 4→6 Expansion Transformation:")
        for comp_type in ['A', 'T', 'C', 'G']:
            result = self.apply_algotransform_to_component_type(comp_type)
            print(f"   {comp_type} components: {result['status']} ({result['original_count']}→{result['new_count']})")
        print()
        
        # 4. Apply 6→3+7 transformation
        print("4. Applying 6→3+7 Refinement Transformation:")
        for comp_type in ['A', 'T', 'C', 'G']:
            result = self.apply_algotransform_to_component_type(comp_type)
            print(f"   {comp_type} components: {result['status']}")
            if result['status'] == 'refinement_complete':
                print(f"      Core: {result['core_count']}, Specialized: {result['specialized_count']}, Total: {result['total_count']}")
        print()
        
        # 5. Final system analysis
        print("5. Final System Analysis:")
        final_state = self.analyze_system_state()
        for comp_type, state in final_state.items():
            print(f"   {comp_type}: {state['component_count']} components, {state['total_elements']} total elements")
        
        print("\n=== Transformation Cycle Complete ===")


def main():
    """Main demonstration function"""
    
    # Create and demonstrate the system
    system = ATCGAlgoTransformSystem()
    system.demonstrate_full_transformation_cycle()
    
    # Additional mathematical demonstrations
    print("\n=== Additional Mathematical Demonstrations ===\n")
    
    # Conservation law verification
    checker = ConservationChecker()
    
    print("Conservation Law Verification:")
    initial = [4, 6]
    final = [3, 7]
    
    conservation_result = checker.verify_all_conservation_laws(initial, final)
    print(f"Initial state: {initial}, Final state: {final}")
    print(f"Sum conserved: {conservation_result['sum_conserved']}")
    print(f"Initial entropy: {conservation_result['initial_entropy']:.3f}")
    print(f"Final entropy: {conservation_result['final_entropy']:.3f}")
    print(f"Entropy change: {conservation_result['entropy_change']:.3f}")
    print(f"Energy conserved: {conservation_result['energy_conserved']}")
    
    # Golden ratio analysis
    print(f"\nGolden Ratio Analysis:")
    ratio_4_3 = 4/3
    ratio_7_6 = 7/6
    golden_ratio = (1 + math.sqrt(5)) / 2
    
    print(f"4/3 ratio: {ratio_4_3:.6f}")
    print(f"7/6 ratio: {ratio_7_6:.6f}")
    print(f"Golden ratio φ: {golden_ratio:.6f}")
    print(f"φ⁻¹: {1/golden_ratio:.6f}")
    print(f"φ⁻²: {1/(golden_ratio**2):.6f}")


if __name__ == "__main__":
    main()